fix: edit code-examples gap value; edit examples and helpers CSS

--- a/src/styles/examples.css
+++ b/src/styles/examples.css
@@ -6,8 +6,7 @@
  * Three Column Article Example Layout
  */
 
-.classic-article-grid {
-  display: grid;
+.classic-article {
   grid-template-columns: repeat(12, 1fr);
 
   color: black;
@@ -17,11 +16,11 @@
   font-family: "Times New Roman", Times, serif;
 }
 
-.classic-article-grid > * {
+.classic-article > * {
   padding: 1rem;
 }
 
-.classic-article-grid h3 {
+.classic-article h3 {
   font-family: "Playfair Display";
   font-weight: bold;
   margin-top: -1rem;
@@ -159,18 +158,36 @@ footer {
 .column-controls {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  column-gap: 1rem;
+  column-gap: 0.75rem;
 }
 
 #ex-cols {
   grid-column: span 1;
 
   display: grid;
-  column-gap: 1rem;
+  column-gap: 0.75rem;
 }
 
 .ex-col {
   background-color: var(--vivid);
   border: 2px solid var(--platinum);
   border-radius: 0.75rem;
+}
+
+/* TwelveColumnGrid */
+
+.twelve-cols {
+  margin-top: 2rem;
+  grid-template-columns: repeat(12, 1fr);
+  column-gap: 0.75rem;
+  border: 2px solid var(--vivid);
+  padding: 1rem;
+  border-radius: 0.75rem;
+}
+
+.twelve-cols div {
+  height: 100px;
+  border: 2px solid var(--platinum);
+  border-radius: 0.75rem;
+  background-color: var(--vivid);
 }
