--- a/src/styles/helpers.css
+++ b/src/styles/helpers.css
@@ -3,7 +3,7 @@
 .code-wrapper {
   display: grid;
 
-  column-gap: 1rem;
+  column-gap: 0.75rem;
   padding: 0.75rem 0;
   margin: 1.5rem 0;
 }
@@ -73,4 +73,75 @@ pre.example-code {
   height: 100%;
   padding: 0;
   background-color: var(--purp);
+}
+
+/* OpenGraphLayout */
+.og-image {
+  width: 1158px;
+  height: 588px;
+  padding: 1rem;
+  gap: 1rem;
+
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  border: 5px solid var(--vivid);
+}
+
+.og-image h1 {
+  font-size: 5rem;
+  padding: 0 1rem;
+  margin-top: 0;
+  line-height: 1.2;
+}
+
+.title-space {
+  grid-column: span 2;
+  grid-row: span 5;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.og-wrapper {
+  padding: 2rem;
+
+  grid-column: span 3;
+  grid-row: span 5;
+  gap: 1.5rem;
+}
+
+.header,
+.nav,
+.content,
+.og-ad,
+.footer {
+  width: 100%;
+  height: 100%;
+  border: 3px solid var(--platinum);
+  box-shadow: rgba(248, 31, 255, 0.6) -5px 5px,
+    rgba(248, 31, 255, 0.4) -10px 10px, rgba(248, 31, 255, 0.2) -15px 15px,
+    rgba(248, 31, 255, 0.1) -20px 20px, rgba(248, 31, 255, 0.05) -25px 25px;
+}
+
+.header {
+  grid-column: span 3;
+}
+
+.nav {
+  grid-row: span 2;
+}
+
+.content {
+  grid-column: span 2;
+  grid-row: span 3;
+}
+
+.og-ad {
+  grid-column: span 1;
+  grid-row: span 1;
+}
+
+.footer {
+  grid-column: span 3;
 }
